feat: configurar segurança e GitHub Pages
- Atualizar .gitignore com proteções adequadas
- Remover dist/ do repositório
- Desabilitar source maps em produção
- Remover scripts legados do backend
- Adicionar .env.example
- Adicionar SECURITY.md
- Configurar vite.config.ts para GitHub Pages
- Adicionar GitHub Actions workflow para deploy automático
- Atualizar README com instruções de deploy
- Adicionar terser para minificação otimizada

Melhorias de segurança:
- ✅ Source maps desabilitados
- ✅ Console logs removidos em produção
- ✅ Variáveis de ambiente protegidas
- ✅ Build artifacts ignorados

Deploy automático:
- GitHub Pages configurado
- Deploy via GitHub Actions
- Base path configurado

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,18 @@
-# Node
+# Dependencies
 node_modules/
-frontend/node_modules/
-frontend/dist/
 
-# Laravel
-backend/vendor/
-backend/node_modules/
-backend/storage/
-backend/bootstrap/cache/
-backend/.env
-backend/.env.local
-backend/.env.testing
-backend/.phpunit.result.cache
+# Build output
+dist/
+build/
 
-# OS
-.DS_Store
-Thumbs.db
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.env
+!.env.example
 
 # Logs
 *.log
@@ -23,3 +20,50 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.vscode/*
+!.vscode/extensions.json
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Testing
+coverage/
+.nyc_output/
+*.lcov
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# Build artifacts
+*.tsbuildinfo
+tsconfig.tsbuildinfo
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Yarn Integrity file
+.yarn-integrity
